--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
     "type": "shopware-platform-plugin",
     "license": "MIT",
     "require": {
-        "shopware/platform": "dev-master"
+        "shopware/core": "v6.1.*",
+        "shopware/administration": "v6.1.*",
+        "shopware/storefront": "v6.1.*"
     },
     "extra": {
         "shopware-plugin-class": "Sas\\BlogModule\\BlogModule",
